add front end logic and cleanup data migration
